# graph-hunter-rust

./: .gitignore  README.md
.claude/: CLAUDE.md
app/: index.html  package-lock.json  package.json
app/src/: App.css  App.tsx  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: ExplorerPanel.tsx  GraphCanvas.tsx  HypothesisBuilder.tsx  IngestPanel.tsx  NodeDetailPanel.tsx
demo_data/: apt_attack_simulation.json  sentinel_attack_simulation.json
graph_hunter_core/: Cargo.toml
graph_hunter_core/src/: analytics.rs  entity.rs  errors.rs  graph.rs  hypothesis.rs  lib.rs  parser.rs  relation.rs  sentinel.rs  sysmon.rs  types.rs
