[package]
name = "graph_hunter_core"
version = "0.1.0"
edition = "2024"
description = "Graph-based Threat Hunting engine for Black Hat Arsenal"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1"
