[package]
name = "graph-hunter-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "graph_hunter_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
graph_hunter_core = { path = "../../graph_hunter_core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
